Adding threadpool logic